swap from vanilla callbacks to promises and adjust swagger
